--- a/pom.xml
+++ b/pom.xml
@@ -4,26 +4,33 @@
 	<groupId>org.geoserver</groupId>
 	<artifactId>egeosmanager</artifactId>
 	<name>egeosmanager</name>
+
+	<properties>
+		<geoserver.version>2.9.1</geoserver.version>
+		<java.version>1.8</java.version>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.geoserver</groupId>
 			<artifactId>gs-rest</artifactId>
-			<version>2.8.2</version>
+			<version>${geoserver.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.geoserver</groupId>
 			<artifactId>gs-main</artifactId>
-			<version>2.8.2</version>
+			<version>${geoserver.version}</version>
 		</dependency>
-        <dependency>
-            <groupId>org.geoserver.web</groupId>
-            <artifactId>gs-web-core</artifactId>
-            <version>2.8.2</version>
-        </dependency>
+		<dependency>
+			<groupId>org.geoserver.web</groupId>
+			<artifactId>gs-web-core</artifactId>
+			<version>${geoserver.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>it.egeos.geoserver</groupId>
 			<artifactId>egs-utils</artifactId>
-			<version>1.0</version>
+			<version>2.0</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -31,17 +38,17 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 	<repositories>
-	   <repository>
-	       <id>Geoserver Repo</id>
-	       <url>http://repo.boundlessgeo.com/main</url>
-	   </repository>
+		<repository>
+			<id>Geoserver Repo</id>
+			<url>http://repo.boundlessgeo.com/main</url>
+		</repository>
 	</repositories>
-	<version>1.1</version>
+	<version>3.0</version>
 </project>
